responsive filters done

--- a/app/assets/stylesheets/pages/_trailers.scss
+++ b/app/assets/stylesheets/pages/_trailers.scss
@@ -1,3 +1,9 @@
 body {
   background: radial-gradient(#34363C, $grey-background);
 }
+
+.filters {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
