--- a/app/assets/stylesheets/components/_custom_radio_buttons.scss
+++ b/app/assets/stylesheets/components/_custom_radio_buttons.scss
@@ -13,6 +13,7 @@
     position: relative;
     height: 100%;
     background-size: cover;
+    background: center;
     border-radius: 3px;
     border: 2px solid white;
   }
