--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <meta property="og:image" content="<%= meta_image %>" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
+    <meta property="fb:admins" content="646574920"/>
 
         <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
@@ -30,7 +31,7 @@
   <body class="<%= yield(:body_class) %>">
 
     <%= render "layouts/navbar" %>
-    
+
     <% if alert %>
       <p class="alert"><%= alert %></p>
     <% end %>
