--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <meta property="og:image" content="<%= meta_image %>" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
-    <meta property="fb:admins" content="646574920"/>
+    <meta property="fb:app_id" content="2174066442827784"/>
 
         <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
