--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,8 +6,8 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <%= link_to "New filters", new_filter_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "My movies", my_movies_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "My preferences", new_filter_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
